Overflow css global solved

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -2,22 +2,29 @@ html,
 body {
   padding: 0;
   margin: 0;
-  min-height: 100% !important;
   width: 100% !important;
   height: 100% !important;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+html {
+  min-height: 100vh;
+
+}
+
 html,
 body,
-body > div:first-child,
+body > div,
+#__next,
 div#__next,
 div#__next > div {
   padding: 0;
   margin: 0;
-  min-height: 100% !important;
-  height: 100% !important;
+  overflow: auto;
+  min-height: -webkit-fill-available;
+  min-height: 100vh !important;
+  height: 100vh !important;
 }
 
 a {
